@@ -1,3 +1,9 @@
+2002-03-27	Thomas Krennwallner <krennwallner@aon.at>
+
+	* doc/texi2pod.pl: added
+	* doc/wol.texi: include changes for manpage creation
+	* doc/Makefile.am: add wol.1 to EXTRA_DIST
+
 2002-03-25	Thomas Krennwallner <krennwallner@aon.at>
 
 	* configure.ac: schedule 0.6.1
